# SoundBloom

./: .env.example  .gitignore  README.md  pyproject.toml  rxconfig.py  start.py
SoundBloom/: SoundBloom.py
docs/: CONCEPT_WORKFLOW.md  ENHANCED_STARTUP.md  LLM_SUCCESS_REPORT.md  QUICK_START.md  SETUP.md  SYSTEM_READY.md
examples/: soundbloom_demo.py
scripts/: Start-SoundBloom-Clean.ps1  Start-SoundBloom-Enhanced.ps1  Start-SoundBloom.ps1  Stop-SoundBloom-Clean.ps1  Stop-SoundBloom.ps1  start-clean.bat  start_soundbloom.bat  start_soundbloom_enhanced.bat  stop-clean.bat  stop_soundbloom.bat  stop_soundbloom_enhanced.bat
tests/: test_llm.py  test_web_server.py
