[tool.poetry]
name = "soundbloom"
version = "0.1.0"
description = "Voice-powered knowledge management system"
authors = ["Matthew <matthew@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
reflex = "^0.8.15"
neo4j = "^6.0.2"
openai = "^2.6.0"
torch = "^2.9.0"
sentence-transformers = "^5.1.1"
whisper-timestamped = "^1.15.9"
numpy = "^2.3.4"
pandas = "^2.3.3"
librosa = "^0.11.0"
requests = "^2.32.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
